k8s/1-infrastructure.yaml
# --- Namespace (Espace isolé pour ton app) ---
apiVersion: v1
kind: Namespace
metadata:
  name: qcm-app

---
# --- Base de Données (PostgreSQL) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: qcm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
# --- Service DB (Pour que le backend trouve la DB) ---
apiVersion: v1
kind: Service
metadata:
  name: db # Le backend utilisera ce nom comme "host"
  namespace: qcm-app
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
