k8s/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: qcm-app
spec:
  replicas: 2 # 🔥 Scalabilité : On lance 2 instances de l'API !
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # 👇 C'est l'image qu'on va construire via GitHub Actions
          image: herve19944/qcm-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: qcm-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80 # Service interne sur port 80
      targetPort: 3000 # Redirige vers le conteneur sur 3000
